
ChangeLog for jsrsasign

OCSP ResponderID object udpate
* Changes from 10.5.19 to 10.5.20 (2022-Apr-25)
  - src/asn1ocsp.js
    - ResponderID class now also supports PEM certificate or
      X509 object for key and name field.
  - test/qunit-do-asn1ocsp.html
    - add some test cases and fix for above
  - remove silver sponsor

Time stamp package update
* Changes from 10.5.18 to 10.5.19 (2022-Apr-23)
  - src/asn1tsp.js
    - TimeStampResp class update to statusinfo member
      will be optional. If omitted, it will be "granted" by default.
    - API manual update for more detail

Time stamp package update
* Changes from 10.5.17 to 10.5.18 (2022-Apr-22)
  - src/asn1tsp.js
    - TSPParser.getTimeStampReq added
    - TSPUtil.parse{TimeStampReq,MessageImprint} now *DEPRECATED*. Please use TSPParser.
  - test/qunit-do-asn1tsp.html
    - add some test cases and fix for above

CIDR subnet mask support in iptohex and hextoip
* Changes from 10.5.16 to 10.5.17 (2022-Apr-14)
  - src/asn1x509.js
    - add IP address support in NameConstraints class
    - bugfix in NameConstraints ip address
    - wrong ASN.1 encoder in NameConstraints class bug fix (wrong explicit tag)
  - src/base64x.js
    - add CIDR subnet mask support in iptohex and hextoip
    - iptohex, hextoip refactoring
  - test/qunit-do-{x509-ext,base64x,asn1x509-tbscert,asn1x509}.html
    - add some test cases and fix for above

Add NameConstraints extension and modify getEncodedHex to tohex
* Changes from 10.5.15 to 10.5.16 (2022-Apr-08)
  - src/asn1x509.js
    - NameConstraints and GeneralSubtree class added
    - add support for nameConstraints in Extensions class
    - remove old GeneralName code
  - src/x509.js
    - getExtNameConstraints and getGeneralSubbtree method added
    - add support for nameConstraints in getParam method
    - X509.getParam supports optional arguments:
      - tbshex: to return hexadecimal tbsCertificate value
      - nodnarray: delete array member of subject and issuer 