@@ -504,13 +504,13 @@
 <span class='line'>497</span>  * Following properties are available:
 <span class='line'>498</span>  * &lt;ul>
 <span class='line'>499</span>  * &lt;li>{Array}name (OPTION) - JSON object of {@link KJUR.asn1.x509.X500Name} parameter,
-<span class='line'>500</span>  * PEM string of X.509 certificate or {@link X509 object} for "byName",&lt;/li>
+<span class='line'>500</span>  * PEM string of X.509 certificate or {@link X509} object for "byName",&lt;/li>
 <span class='line'>501</span>  * &lt;li>{String}key (OPTION) - hexadecimal string of KeyHash value,
-<span class='line'>502</span>  * PEM string of X.509 certificate or {@link X509 object} for "byKey"&lt;/li>
+<span class='line'>502</span>  * PEM string of X.509 certificate or {@link X509} object for "byKey"&lt;/li>
 <span class='line'>503</span>  * &lt;/ul>
 <span class='line'>504</span>  * &lt;br/>
 <span class='line'>505</span>  * NOTE: From jsrsasign 10.5.20, "name" and "key" member values can be
-<span class='line'>506</span>  * specified by PEM string of X.509 certificate or {@link X509 object}.
+<span class='line'>506</span>  * specified by PEM string of X.509 certificate or {@link X509} object.
 <span class='line'>507</span>  * For "name", subject field of the certificate will be used and
 <span class='line'>508</span>  * for "key", subjectKeyIdentifier extension value of the certificate will be used
 <span class='line'>509</span>  * respectively.
